--- a/proposal.html
+++ b/proposal.html
@@ -713,12 +713,14 @@
         <div class="proposal-layout__inner">
           <!-- FORM -->
           <form
-            class="proposal-form"
-            action="/submit-proposal"
-            method="POST"
-            enctype="multipart/form-data"
-            novalidate
-          >
+  id="proposalForm"
+  class="proposal-form"
+  action="#"
+  method="POST"
+  enctype="multipart/form-data"
+  novalidate
+>
+
             <!-- PROPOSAL DETAILS -->
             <fieldset class="proposal-fieldset">
               <legend>Proposal details</legend>
