--- a/proposal.html
+++ b/proposal.html
@@ -17,18 +17,12 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Request Proposal | CICL Consulting"
-    />
+    <meta property="og:title" content="Request Proposal | CICL Consulting" />
     <meta
       property="og:description"
       content="Share your context and priorities so CICL can prepare a tailored consulting or training proposal for your organisation."
     />
-    <meta
-      property="og:url"
-      content="https://ciconsult.com.ng/proposal.html"
-    />
+    <meta property="og:url" content="https://ciconsult.com.ng/proposal.html" />
     <meta
       property="og:image"
       content="https://ciconsult.com.ng/images/og/request-proposal-og.jpg"
@@ -36,10 +30,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Request Proposal | CICL Consulting"
-    />
+    <meta name="twitter:title" content="Request Proposal | CICL Consulting" />
     <meta
       name="twitter:description"
       content="Share your context and priorities so CICL can prepare a tailored consulting or training proposal for your organisation."
@@ -696,11 +687,14 @@
           <h1>Tell us what you need, and we’ll shape the right proposal.</h1>
           <p class="proposal-hero__lead">
             Share a bit about your organisation, priorities and timelines so we
-            can respond with a clear, tailored proposal across Talent
-            Management &amp; HR, Business Development &amp; Strategy or
-            Professional Training Programmes.
+            can respond with a clear, tailored proposal across Talent Management
+            &amp; HR, Business Development &amp; Strategy or Professional
+            Training Programmes.
           </p>
-          <ul class="proposal-hero__highlights" aria-label="What you can expect">
+          <ul
+            class="proposal-hero__highlights"
+            aria-label="What you can expect"
+          >
             <li>Responses typically within 2–3 business days.</li>
             <li>Clear scope, timelines and indicative investment.</li>
             <li>Aligned to your context, not a generic brochure.</li>
@@ -713,14 +707,13 @@
         <div class="proposal-layout__inner">
           <!-- FORM -->
           <form
-  id="proposalForm"
-  class="proposal-form"
-  action="#"
-  method="POST"
-  enctype="multipart/form-data"
-  novalidate
->
-
+            id="proposalForm"
+            class="proposal-form"
+            action="#"
+            method="POST"
+            enctype="multipart/form-data"
+            novalidate
+          >
             <!-- PROPOSAL DETAILS -->
             <fieldset class="proposal-fieldset">
               <legend>Proposal details</legend>
@@ -799,9 +792,7 @@
                 </div>
 
                 <div class="form-field">
-                  <label for="hearAbout">
-                    How did you hear about CICL?
-                  </label>
+                  <label for="hearAbout"> How did you hear about CICL? </label>
                   <select id="hearAbout" name="hearAbout">
                     <option value="">Please select</option>
                     <option value="referral">Referral / word of mouth</option>
@@ -819,8 +810,8 @@
             <fieldset class="proposal-fieldset">
               <legend>Organisation details</legend>
               <p class="fieldset-intro">
-                A brief picture of your organisation helps us frame the
-                proposal correctly.
+                A brief picture of your organisation helps us frame the proposal
+                correctly.
               </p>
 
               <div class="form-row">
@@ -844,10 +835,14 @@
                   <select id="orgType" name="orgType" required>
                     <option value="">Please select</option>
                     <option value="sme">SME / Growing business</option>
-                    <option value="corporate">Corporate / Large enterprise</option>
+                    <option value="corporate">
+                      Corporate / Large enterprise
+                    </option>
                     <option value="public">Public sector</option>
                     <option value="ngo">NGO / Development organisation</option>
-                    <option value="professional">Professional services firm</option>
+                    <option value="professional">
+                      Professional services firm
+                    </option>
                     <option value="other">Other</option>
                   </select>
                 </div>
@@ -858,32 +853,20 @@
                   <label for="industry">
                     Industry / sector <span aria-hidden="true">*</span>
                   </label>
-                  <input
-                    type="text"
-                    id="industry"
-                    name="industry"
-                    required
-                  />
+                  <input type="text" id="industry" name="industry" required />
                 </div>
 
                 <div class="form-field">
                   <label for="country">
                     Country / primary location <span aria-hidden="true">*</span>
                   </label>
-                  <input
-                    type="text"
-                    id="country"
-                    name="country"
-                    required
-                  />
+                  <input type="text" id="country" name="country" required />
                 </div>
               </div>
 
               <div class="form-row">
                 <div class="form-field form-field--half">
-                  <label for="headcount">
-                    Approximate staff size
-                  </label>
+                  <label for="headcount"> Approximate staff size </label>
                   <select id="headcount" name="headcount">
                     <option value="">Please select</option>
                     <option value="1-20">1–20</option>
@@ -975,9 +958,7 @@
 
               <div class="form-row">
                 <div class="form-field">
-                  <label for="timeline">
-                    Desired start timeline
-                  </label>
+                  <label for="timeline"> Desired start timeline </label>
                   <select id="timeline" name="timeline">
                     <option value="">Please select</option>
                     <option value="immediately">Immediately</option>
@@ -997,7 +978,9 @@
                     <option value="1-3m">₦1,000,000–₦3,000,000</option>
                     <option value="3-5m">₦3,000,000–₦5,000,000</option>
                     <option value="5m-plus">₦5,000,000+</option>
-                    <option value="other-currency">Budget in other currency</option>
+                    <option value="other-currency">
+                      Budget in other currency
+                    </option>
                   </select>
                 </div>
               </div>
@@ -1008,11 +991,7 @@
                     Any additional background, current challenges or internal
                     context we should know?
                   </label>
-                  <textarea
-                    id="scope"
-                    name="scope"
-                    rows="4"
-                  ></textarea>
+                  <textarea id="scope" name="scope" rows="4"></textarea>
                 </div>
               </div>
 
@@ -1077,6 +1056,13 @@
                 Or book a strategy call instead
               </a>
             </div>
+            <div class="proposal-status" aria-live="polite">
+              <p
+                id="proposalStatusMessage"
+                class="proposal-status__message"
+                hidden
+              ></p>
+            </div>
           </form>
 
           <!-- SIDEBAR -->
@@ -1118,9 +1104,7 @@
               </p>
               <p class="proposal-contact">
                 You can also email us at
-                <a href="mailto:info@ciconsult.com.ng"
-                  >info@ciconsult.com.ng</a
-                >
+                <a href="mailto:info@ciconsult.com.ng">info@ciconsult.com.ng</a>
                 with supporting documents.
               </p>
             </div>
@@ -1233,6 +1217,7 @@
 
     <!-- Scripts -->
     <script src="../js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
