--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Contact CICL — Talk to an Advisor</title>
+    <title>
+      Contact CICL — Talk to an Advisor
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -183,7 +185,9 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" aria-current="page">Home</a>
+            <a href="/index.html" aria-current="page"
+              >Home</a
+            >
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -207,8 +211,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/recruitment-selection.html"
+                        <a href="/talent-management-hr-solution/recruitment-selection.html"
                           ><strong>Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
@@ -224,8 +227,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/training-development.html"
+                        <a href="/talent-management-hr-solution/training-development.html"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
@@ -240,8 +242,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
+                        <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
@@ -256,8 +257,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/background-checks-verification.html"
+                        <a href="/talent-management-hr-solution/background-checks-verification.html"
                           ><strong>Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
@@ -269,8 +269,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
+                        <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
@@ -285,8 +284,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/talent-management-hr-solution/career-service.html"
+                        <a href="/talent-management-hr-solution/career-service.html"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
@@ -312,8 +310,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/market-research-business-analysis.html"
+                        <a href="/business-development/market-research-business-analysis.html"
                           ><strong
                             >Market Research &amp; Business Analysis</strong
                           >
@@ -330,8 +327,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/business-model-structure-design.html"
+                        <a href="/business-development/business-model-structure-design.html"
                           ><strong
                             >Business Model &amp; Structure Design</strong
                           >
@@ -347,8 +343,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/corporate-strategy-execution.html"
+                        <a href="/business-development/corporate-strategy-execution.html"
                           ><strong>Corporate Strategy &amp; Execution</strong>
                           <div class="item-sub">
                             Align vision, people, and processes for measurable
@@ -374,8 +369,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-gears icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/business-process-optimization.html"
+                        <a href="/business-development/business-process-optimization.html"
                           ><strong>Business Process Optimization</strong>
                           <div class="item-sub">
                             Streamline operations and eliminate inefficiencies.
@@ -386,8 +380,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-coins icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/financial-modeling-valuation.html"
+                        <a href="/business-development/financial-modeling-valuation.html"
                           ><strong>Financial Modeling &amp; Valuation</strong>
                           <div class="item-sub">
                             Gain clarity on investments and performance.
@@ -401,8 +394,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/business-development/auditing-reconciliation.html"
+                        <a href="/business-development/auditing-reconciliation.html"
                           ><strong>Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
@@ -427,8 +419,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/professional-training/leadership-management.html"
+                        <a href="/professional-training/leadership-management.html"
                           ><strong>Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Develop emotionally intelligent leaders who inspire
@@ -440,8 +431,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-users icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a
-                          href="/professional-training/hr-people-maagement-training.html"
+                        <a href="/professional-training/hr-people-maagement-training.html"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Build HR teams that drive business success.
@@ -483,8 +473,7 @@
                     <li role="listitem">
                       <i class="fa-solid fa-truck icon" aria-hidden="true"></i>
                       <div class="item-text">
-                        <a
-                          href="/professional-training/operation-supply-chain.html"
+                        <a href="/professional-training/operation-supply-chain.html"
                           ><strong>Operations &amp; Supply Chain</strong>
                           <div class="item-sub">
                             Drive efficiency in procurement, inventory, and
@@ -499,8 +488,7 @@
                         aria-hidden="true"
                       ></i>
                       <div class="item-text">
-                        <a
-                          href="/professional-training/health-safety-environment.html"
+                        <a href="/professional-training/health-safety-environment.html"
                           ><strong
                             >Health, Safety &amp; Environment (HSE)</strong
                           >
@@ -530,8 +518,7 @@
                 </ul>
               </div>
               <p class="mega-footer">
-                Unlock your career potential,
-                <a href="/contact.html">Connect with us</a>
+                Unlock your career potential, <a href="/contact.html">Connect with us</a>
               </p>
             </div>
           </li>
@@ -613,9 +600,7 @@
                   aria-expanded="false"
                   aria-controls="m-hr-list"
                 >
-                  <a
-                    class="section-title"
-                    href="/services/talent-management-hr-solution.html"
+                  <a class="section-title" href="/services/talent-management-hr-solution.html"
                     >Talent Management &amp; HR Solutions</a
                   >
                   <i
@@ -625,32 +610,27 @@
                 </button>
                 <ul id="m-hr-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a
-                      href="/talent-management-hr-solution/recruitment-selection.html"
+                    <a href="/talent-management-hr-solution/recruitment-selection.html"
                       >Recruitment &amp; Selection</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/talent-management-hr-solution/training-development.html"
+                    <a href="/talent-management-hr-solution/training-development.html"
                       >Training &amp; Development</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
+                    <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
                       >Talent &amp; Payroll Outsourcing</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/talent-management-hr-solution/background-checks-verification.html"
+                    <a href="/talent-management-hr-solution/background-checks-verification.html"
                       >Background Checks &amp; Verification</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
+                    <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
                       >HR Policies &amp; Employee Handbook</a
                     >
                   </li>
@@ -669,9 +649,7 @@
                   aria-expanded="false"
                   aria-controls="m-biz-list"
                 >
-                  <a
-                    href="/services/business-development-strategy.html"
-                    class="section-title"
+                  <a href="/services/business-development-strategy.html" class="section-title"
                     >Business Development &amp; Strategy</a
                   >
                   <i
@@ -681,20 +659,17 @@
                 </button>
                 <ul id="m-biz-list" class="section-list" aria-hidden="true">
                   <li>
-                    <a
-                      href="/business-development/market-research-business-analysis.html"
+                    <a href="/business-development/market-research-business-analysis.html"
                       >Market Research &amp; Business Analysis</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/business-development/business-model-structure-design.html"
+                    <a href="/business-development/business-model-structure-design.html"
                       >Business Model &amp; Structure Design</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/business-development/corporate-strategy-execution.html"
+                    <a href="/business-development/corporate-strategy-execution.html"
                       >Corporate Strategy &amp; Execution</a
                     >
                   </li>
@@ -704,14 +679,12 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/business-development/business-process-optimization.html"
+                    <a href="/business-development/business-process-optimization.html"
                       >Business Process Optimization</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/business-development/financial-modeling-valuation.html"
+                    <a href="/business-development/financial-modeling-valuation.html"
                       >Financial Modeling &amp; Valuation</a
                     >
                   </li>
@@ -730,9 +703,7 @@
                   aria-expanded="false"
                   aria-controls="m-train-list"
                 >
-                  <a
-                    href="/services/professional-training-programme.html"
-                    class="section-title"
+                  <a href="/services/professional-training-programme.html" class="section-title"
                     >Professional Training Programmes</a
                   >
                   <i
@@ -747,8 +718,7 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/professional-training/hr-people-maagement-training.html"
+                    <a href="/professional-training/hr-people-maagement-training.html"
                       >HR &amp; People Management</a
                     >
                   </li>
@@ -768,8 +738,7 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/professional-training/health-safety-environment.html"
+                    <a href="/professional-training/health-safety-environment.html"
                       >Health, Safety &amp; Environment (HSE)</a
                     >
                   </li>
@@ -925,7 +894,7 @@
       </div>
 
       <form
-        id="contact-form"
+      id="contact-form"
         class="contact-form"
         action="/api/contact"
         method="post"
@@ -1059,13 +1028,6 @@
         </p>
 
         <button type="submit" class="btn-solid">Send</button>
-        <div class="proposal-status" aria-live="polite">
-          <p
-            id="proposalStatusMessage"
-            class="proposal-status__message"
-            hidden
-          ></p>
-        </div>
 
         <!-- screenreader live region for server responses -->
         <div class="sr-only" aria-live="polite"></div>
@@ -1226,7 +1188,6 @@
 
     <!-- JS -->
     <script src="./js/script.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
