--- a/professional-training/finance-accounting.html
+++ b/professional-training/finance-accounting.html
@@ -1806,9 +1806,9 @@
             <li>
               <span>&copy; 2025</span> Conceptual Integrated Consulting Limited
             </li>
-            <li><a href="/privacy.html">Privacy policy</a></li>
-            <li><a href="/terms.html">Terms of service</a></li>
-            <li><a href="/cookies.html">Cookies</a></li>
+            <li><a href="/privacy-policy.html">Privacy policy</a></li>
+            <li><a href="/terms-condition.html">Terms of service</a></li>
+            <!-- <li><a href="/cookies.html">Cookies</a></li> -->
           </ul>
 
           <ul class="social-icons">
