--- a/index.html
+++ b/index.html
@@ -1504,9 +1504,9 @@
           <span>&copy; 2025</span> Conceptual Integrated Consulting Limited
         </p>
         <ul role="list" class="copyright">
-          <li role="listitem"><a href="#">Privacy policy</a></li>
-          <li role="listitem"><a href="#">Terms of service</a></li>
-          <li role="listitem"><a href="#">Cookies</a></li>
+          <li role="listitem"><a href="/privacy-policy.html">Privacy policy</a></li>
+          <li role="listitem"><a href="/terms-condition.html">Terms of service</a></li>
+          <!-- <li role="listitem"><a href="#">Cookies</a></li> -->
         </ul>
 
         <ul role="list" class="social-icons">
