--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -50,7 +50,7 @@
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="active-navlink"
+            <a href="/service.html" class="nav-link"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -654,7 +654,7 @@
     </header>
 
     <main class="legal-page">
-      <section class="hero hero--subpage">
+      <section class="hero hero--subpage hero--subpage2">
         <div class="container">
           <h1>Privacy Policy</h1>
           <p>
