--- a/terms-condition.html
+++ b/terms-condition.html
@@ -73,7 +73,7 @@
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="active-navlink"
+            <a href="/service.html" class="nav-link"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -677,7 +677,7 @@
     </header>
 
     <main class="legal-page">
-      <section class="hero hero--subpage">
+      <section class="hero hero--subpage hero--subpage1">
         <div class="container">
           <h1>Terms &amp; Conditions</h1>
           <p>
